# SCOUBI

./: LICENSE  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
.github/workflows/: tests.yml  workflow.yml
scoubi/: __init__.py
scoubi/data/: __init__.py  pairs.pkl
scoubi/io/: _io.py
scoubi/model/: __init__.py  _annotate.py  _annotate_old.py
scoubi/plotting/: __init__.py  _enrichment.py  _radviz.py  _sunburst.py
scoubi/preprocess/: __init__.py  _preprocess.py
scoubi/tools/: __init__.py  _communication.py  _distance.py  _empirical.py  _enrichment.py  _overview.py  _profile.py  _ptest.py
tests/: test_basic_workflows.py
tests/data/: transcripts_small.parquet
