[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = "SCOUBI"
version = "0.01"


[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = "scoubi"
version = "0.01"
authors = [
  { name="Bhavay Aggarwal", email="baggarwal9@gatech.edu" },
]
description = "SCOUBI"
requires-python = ">=3.12"
dependencies = [

]
license = "MIT"
readme = "README.md"