[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scoubi"
version = "1.0"
authors = [
  { name="Bhavay Aggarwal", email="baggarwal9@gatech.edu" },
]
description = "Signaling-informed Characterization of Unresolved Biological Interfaces"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["spatial transcriptomics", "neuroscience", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bioinformatics",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.3",
  "pyarrow>=15",
  "scipy>=1.13",
  "scikit-learn>=1.6",
  "statsmodels>=0.13",
  "torch>=2.5",
  "anndata>=0.10",
  "scanpy>=1.10",
  "sparse>=0.17",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "tqdm>=4.64",
  "requests>=2.27",
  "rich>=13.4",
  "adjustText>=1.3",
  "colorcet>=2.0",
]

[project.urls]
Documentation = "https://github.com/bhavayaggarwal/SCOUBI"
Repository = "https://github.com/bhavayaggarwal/SCOUBI"
Issues = "https://github.com/bhavayaggarwal/SCOUBI/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scoubi*"]

[tool.setuptools.package-data]
"scoubi.data" = ["pairs.pkl"]
